--- a/src/MakaMek.Avalonia/MakaMek.Avalonia/Styles/Typography.axaml
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia/Styles/Typography.axaml
@@ -98,5 +98,12 @@
         <Setter Property="FontWeight" Value="Bold"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
     </Style>
+    
+    <Style Selector="TextBlock.probabilityText">
+        <Setter Property="FontSize" Value="18"/>
+        <Setter Property="HorizontalAlignment" Value="Center"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="FontWeight" Value="Bold"/>
+    </Style>
 </Styles>
 
