--- a/src/MakaMek.Avalonia/MakaMek.Avalonia/Controls/UnitPartSelector.axaml
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia/Controls/UnitPartSelector.axaml
@@ -3,150 +3,68 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:viewModels="clr-namespace:Sanet.MakaMek.Presentation.ViewModels;assembly=Sanet.MakaMek.Presentation"
+             xmlns:controls="clr-namespace:Sanet.MakaMek.Avalonia.Controls"
              mc:Ignorable="d" d:DesignWidth="300" d:DesignHeight="300"
              x:Class="Sanet.MakaMek.Avalonia.Controls.UnitPartSelector"
              x:DataType="viewModels:AimedShotLocationSelectorViewModel">
-    
-    <UserControl.Styles>
-        <Style Selector="Button.bodyPartButton">
-            <Setter Property="Background" Value="Transparent"/>
-            <Setter Property="BorderBrush" Value="#4CAF50"/>
-            <Setter Property="BorderThickness" Value="2"/>
-            <Setter Property="Margin" Value="1"/>
-            <Setter Property="Padding" Value="2"/>
-            <Setter Property="FontSize" Value="10"/>
-            <Setter Property="FontWeight" Value="Bold"/>
-            <Setter Property="VerticalAlignment" Value="Stretch"/>
-            <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
-        </Style>
-        
-        <Style Selector="Button.bodyPartButton:pointerover">
-            <Setter Property="Background" Value="#4CAF50"/>
-            <Setter Property="Opacity" Value="0.8"/>
-        </Style>
-        
-        <Style Selector="Button.bodyPartButton:disabled">
-            <Setter Property="BorderBrush" Value="#666"/>
-            <Setter Property="Foreground" Value="#666"/>
-            <Setter Property="Opacity" Value="0.5"/>
-        </Style>
-    </UserControl.Styles>
-    
-    <Grid ColumnDefinitions="2*,2*,2*,2*,2*"
+
+    <Grid ColumnDefinitions="*,*,*,*,*"
           RowDefinitions="*,*,*,*,*,*,*"
           Margin="5">
         <!-- Head -->
-        <Button Name="HeadButton" 
+        <controls:UnitPartItem
                 Grid.Row="0" Grid.Column="2" Grid.RowSpan="2"
-                Classes="bodyPartButton"
-                Command="{Binding SelectPart}"
-                CommandParameter="{Binding HeadPart.Location}"
-                IsEnabled="{Binding HeadPart.IsSelectable}">
-            <StackPanel HorizontalAlignment="Stretch">
-                <TextBlock Text="H" Classes="label"/>
-                <TextBlock 
-                    Text="{Binding HeadPart.HitProbabilityText}" 
-                    Foreground="{Binding HeadPart.HitProbability, Converter={StaticResource HitProbabilityColorConverter}}"
-                    Classes="probabilityText"/>
-            </StackPanel>
-        </Button>
+                DataContext="{Binding HeadPart}"
+                Command="{Binding $parent[UserControl].DataContext.SelectPart}"
+                CommandParameter="{Binding Location}"/>
 
         <!-- Left Torso -->
-        <Button Name="LeftTorsoButton" 
-                Grid.Row="1" Grid.Column="3" Grid.RowSpan="2"
-                Classes="bodyPartButton"
-                Classes.destroyed="{Binding LeftTorsoPart.IsDestroyed}"
-                Command="{Binding SelectPart}"
-                CommandParameter="{Binding LeftTorsoPart.Location}"
-                IsEnabled="{Binding LeftTorsoPart.IsSelectable}">
-            <StackPanel>
-                <TextBlock Text="LT" Classes="label"/>
-                <TextBlock Text="{Binding LeftTorsoPart.HitProbabilityText}" Classes="probabilityText"/>
-            </StackPanel>
-        </Button>
+        <controls:UnitPartItem
+                Grid.Row="1" Grid.Column="3" Grid.RowSpan="3"
+                DataContext="{Binding LeftTorsoPart}"
+                Command="{Binding $parent[UserControl].DataContext.SelectPart}"
+                CommandParameter="{Binding Location}"/>
 
         <!-- Center Torso -->
-        <Button Name="CenterTorsoButton" 
+        <controls:UnitPartItem
                 Grid.Row="2" Grid.Column="2" Grid.RowSpan="3"
-                Classes="bodyPartButton"
-                Classes.destroyed="{Binding CenterTorsoPart.IsDestroyed}"
-                Command="{Binding SelectPart}"
-                CommandParameter="{Binding CenterTorsoPart.Location}"
-                IsEnabled="{Binding CenterTorsoPart.IsSelectable}">
-            <StackPanel>
-                <TextBlock Text="CT" Classes="label"/>
-                <TextBlock Text="{Binding CenterTorsoPart.HitProbabilityText}" Classes="probabilityText"/>
-            </StackPanel>
-        </Button>
+                DataContext="{Binding CenterTorsoPart}"
+                Command="{Binding $parent[UserControl].DataContext.SelectPart}"
+                CommandParameter="{Binding Location}"/>
 
         <!-- Right Torso -->
-        <Button Name="RightTorsoButton" 
+        <controls:UnitPartItem
                 Grid.Row="1" Grid.Column="1" Grid.RowSpan="3"
-                Classes="bodyPartButton"
-                Classes.destroyed="{Binding RightTorsoPart.IsDestroyed}"
-                Command="{Binding SelectPart}"
-                CommandParameter="{Binding RightTorsoPart.Location}"
-                IsEnabled="{Binding RightTorsoPart.IsSelectable}">
-            <StackPanel>
-                <TextBlock Text="RT" Classes="label"/>
-                <TextBlock Text="{Binding RightTorsoPart.HitProbabilityText}" Classes="probabilityText"/>
-            </StackPanel>
-        </Button>
+                DataContext="{Binding RightTorsoPart}"
+                Command="{Binding $parent[UserControl].DataContext.SelectPart}"
+                CommandParameter="{Binding Location}"/>
 
         <!-- Left Arm -->
-        <Button Name="LeftArmButton" 
+        <controls:UnitPartItem
                 Grid.Row="2" Grid.Column="4" Grid.RowSpan="3"
-                Classes="bodyPartButton"
-                Classes.destroyed="{Binding LeftArmPart.IsDestroyed}"
-                Command="{Binding SelectPart}"
-                CommandParameter="{Binding LeftArmPart.Location}"
-                IsEnabled="{Binding LeftArmPart.IsSelectable}">
-            <StackPanel>
-                <TextBlock Text="LA" Classes="label"/>
-                <TextBlock Text="{Binding LeftArmPart.HitProbabilityText}" Classes="probabilityText"/>
-            </StackPanel>
-        </Button>
+                DataContext="{Binding LeftArmPart}"
+                Command="{Binding $parent[UserControl].DataContext.SelectPart}"
+                CommandParameter="{Binding Location}"/>
 
         <!-- Right Arm -->
-        <Button Name="RightArmButton" 
+        <controls:UnitPartItem
                 Grid.Row="2" Grid.Column="0" Grid.RowSpan="3"
-                Classes="bodyPartButton"
-                Classes.destroyed="{Binding RightArmPart.IsDestroyed}"
-                Command="{Binding SelectPart}"
-                CommandParameter="{Binding RightArmPart.Location}"
-                IsEnabled="{Binding RightArmPart.IsSelectable}">
-            <StackPanel>
-                <TextBlock Text="RA" Classes="label"/>
-                <TextBlock Text="{Binding RightArmPart.HitProbabilityText}" Classes="probabilityText"/>
-            </StackPanel>
-        </Button>
+                DataContext="{Binding RightArmPart}"
+                Command="{Binding $parent[UserControl].DataContext.SelectPart}"
+                CommandParameter="{Binding Location}"/>
 
         <!-- Left Leg -->
-        <Button Name="LeftLegButton" 
+        <controls:UnitPartItem
                 Grid.Row="4" Grid.Column="3" Grid.RowSpan="3"
-                Classes="bodyPartButton"
-                Classes.destroyed="{Binding LeftLegPart.IsDestroyed}"
-                Command="{Binding SelectPart}"
-                CommandParameter="{Binding LeftLegPart.Location}"
-                IsEnabled="{Binding LeftLegPart.IsSelectable}">
-            <StackPanel>
-                <TextBlock Text="LL" Classes="label"/>
-                <TextBlock Text="{Binding LeftLegPart.HitProbabilityText}" Classes="probabilityText"/>
-            </StackPanel>
-        </Button>
+                DataContext="{Binding LeftLegPart}"
+                Command="{Binding $parent[UserControl].DataContext.SelectPart}"
+                CommandParameter="{Binding Location}"/>
 
         <!-- Right Leg -->
-        <Button Name="RightLegButton" 
+        <controls:UnitPartItem
                 Grid.Row="4" Grid.Column="1" Grid.RowSpan="3"
-                Classes="bodyPartButton"
-                Classes.destroyed="{Binding RightLegPart.IsDestroyed}"
-                Command="{Binding SelectPart}"
-                CommandParameter="{Binding RightLegPart.Location}"
-                IsEnabled="{Binding RightLegPart.IsSelectable}">
-            <StackPanel>
-                <TextBlock Text="RL" Classes="label"/>
-                <TextBlock Text="{Binding RightLegPart.HitProbabilityText}" Classes="probabilityText"/>
-            </StackPanel>
-        </Button>
+                DataContext="{Binding RightLegPart}"
+                Command="{Binding $parent[UserControl].DataContext.SelectPart}"
+                CommandParameter="{Binding Location}"/>
     </Grid>
 </UserControl>
