--- a/src/MakaMek.Avalonia/MakaMek.Avalonia/Views/BattleMapView.axaml
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia/Views/BattleMapView.axaml
@@ -130,7 +130,7 @@
             IsVisible="{Binding IsUnitPartSelectorVisible}"
             Title="Select Target Location"
             CloseCommand="{Binding HideBodyPartSelectorCommand}"
-            HorizontalAlignment="Center"
+            HorizontalAlignment="Right"
             VerticalAlignment="Center">
             <controls:UnitPartSelector DataContext="{Binding UnitPartSelector}" />
         </templatedControls:GamePanel>
